--- a/morpheus.html
+++ b/morpheus.html
@@ -96,6 +96,17 @@
 </head>
 
 <body>
+	<!-- Language Selection -->
+	<div id="lang-overlay">
+		<div class="lang-title">Select Language / Escolha o Idioma</div>
+		<div class="lang-options">
+			<button class="lang-btn" data-lang="pt">Português</button>
+			<button class="lang-btn" data-lang="en">English</button>
+			<button class="lang-btn" data-lang="es">Español</button>
+			<button class="lang-btn" data-lang="fr">Français</button>
+		</div>
+	</div>
+
 	<!-- Overlay for Animated Text -->
 	<div id="hero-overlay">
 		<div class="scramble-text"></div>
